@@ -4,7 +4,7 @@
 	 <_title>MyPaint</_title>
 	 <_description>Painting application</_description>
 	 <_prerequisite>mouse manipulation</_prerequisite>
-	 <_goal>Drawing activity (pixmap). Uses pressure device if any.</_goal>
+	 <_goal>Painting activity. Uses pressure device if any.</_goal>
 	 <_manual>Choose brush and colors and draw. have fun!</_manual>
   </Board>
 </GCompris>
